:unreleased: {base}/compare/v1.4.3..HEAD

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/en/1.1.0/[Keep a Changelog],
and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning].

== {unreleased}[Unreleased]

This section tracks upcoming changes that are not yet released.

== {v1_4_3}[v1.4.3]

=== Fixed

* Removed redundant debug statements from `post_gen` hooks.

== {v1_4_2}[v1.4.2]

=== Fixed

* Removed redundant paths in `_copy_without_render` list.

== {v1_4_1}[v1.4.1]

=== Added

* Trigger DAG-OS pages generation on documentation changes.

=== Fixed

* Spelling of DAG-OS.

== {v1_4_0}[v1.4.0]

=== Added

* Antora documentation stubs.
* Symlink checking pre-commit hook.

=== Changed

* Replaced README contents with reference to Antora documentation.

== {v1_3_0}[v1.3.0]

=== Added

* Contribution guidelines.
* GitHub issue templates.
* GitHub pull request template.

== {v1_2_0}[v1.2.0]

=== Added

* Role description via cookiecutter.
* Verify dependencies are installed before generation.

=== Changed

* README title now starts with `Ansible Role:`.
* Use Molecule min. Ansible version for `min_ansible_version` key in `meta/main.yml`.

== {v1_1_1}[v1.1.1]

=== Fixed

* Use role name as Molecule instance name.

== {v1_1_0}[v1.1.0]

=== Added

* Additional pre-commit hooks.
** Check for merge conflicts in files.
** Detect private keys.

=== Changed

* Bump pre-commit version.

=== Fixed

* Typo in changelog.

== {v1_0_3}[v1.0.3]

=== Added

* Ansible role argument validation file.

=== Changed

* Modify Ansible role meta information.

=== Fixed

* Ensure Ansible meta files are interpreted as YAML files.

== {v1_0_2}[v1.0.2]

=== Changed

* After initializing Ansible role via Molecule, remove redundant `tests` directory.

== {v1_0_1}[v1.0.1]

=== Added

* https://code.visualstudio.com/[VS Code] configuration for Ansible.

=== Changed
