@@ -22,6 +22,7 @@ jobs:
         uses: tj-actions/changed-files@v12.2
         with:
           files: |
+            CHANGELOG.adoc
             ^docs/
             defaults/main.yml
             molecule/default/converge.yml
